# tokscale

./: .gitignore  README.ja.md  README.ko.md  README.md  README.zh-cn.md  REMOTE-SETUP.md  ai-todolist.md  issue-utc-timezone-bug.md  notepad.md  package.json  tui-redesign-plan.md
.github/workflows/: build-native.yml  publish-cli.yml
benchmarks/: README.md  generate.ts  runner.ts
core/: Cargo.toml  index.js  package.json
core/__test__/: index.spec.mjs
core/benches/: json_parsing.rs
core/src/: aggregator.rs  lib.rs  parser.rs  pricing.rs  scanner.rs
core/src/sessions/: claudecode.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs
docs/: PERFORMANCE_OPTIMIZATION.md  fix-terminal-cleanup.md
frontend/src/app/(main)/: page.tsx
frontend/src/app/api/users/[username]/: route.ts
frontend/src/app/u/[username]/: page.tsx
frontend/src/components/: BreakdownPanel.tsx  SourceLogo.tsx  TabBar.tsx  TokenGraph3D.tsx  Tooltip.tsx
frontend/src/components/profile/: index.tsx
frontend/src/lib/db/: schema.ts
prompt-logs/260203-sort-cli-flag/: retro.md
prompt-logs/260203-utc-timezone-fix/: retro.md
src/: claudecode.ts  cli.ts  credentials.ts  cursor.ts  graph-types.ts  graph.ts  native.ts
